# automathor

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  automathor.py  pyproject.toml  submit.py  template.jinja2
.devcontainer/: devcontainer.json  requirements.txt
