[tool.poetry]
name = "automathor"
version = "0.1.0"
description = "Whosoever holds this hammer, if he be worthy, shall possess the power of Thor."
authors = ["Aleksandr Ilin <ailin@partcad.org>"]
license = "Apache 2.0"
readme = "README.md"

[tool.black]
line-length = 120
target-version = ['py312']

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
